--- a/label_studio/tests/users.tavern.yml
+++ b/label_studio/tests/users.tavern.yml
@@ -28,6 +28,7 @@ stages:
   request:
     json:
       email: test_user@heartextest.com
+      first_name: Testperson
       username: test user
       active_organization: !int '{org_pk}'
     method: POST
@@ -43,3 +44,15 @@ stages:
     url: '{django_live_url}/api/users/{new_user_pk}'
   response:
     status_code: 200
+- name: stage
+  request:
+    method: PATCH
+    url: '{django_live_url}/api/users/{new_user_pk}'
+    json:
+      first_name: Changedname
+      email: w@heartex.com
+  response:
+    status_code: 200
+    json:
+      first_name: Changedname
+      email: test_user@heartextest.com
