--- a/label_studio/tests/tasks_history_back.tavern.yml
+++ b/label_studio/tests/tasks_history_back.tavern.yml
@@ -102,7 +102,8 @@ stages:
         annotation_created_at: created_at
     status_code: 201
 
-- name: get_next_task
+- &get_next_task_third
+  name: get_next_task
   request:
     method: GET
     url: '{django_live_url}/api/projects/{project_pk}/next'
@@ -110,7 +111,8 @@ stages:
     json:
       id: !int '{third_task_pk}'
 
-- name: get_previous_task_no_anno_or_draft_for3
+- &get_previous_task_no_anno_or_draft_for3
+  name: get_previous_task_no_anno_or_draft_for3
   request:
     method: GET
     url: '{django_live_url}/api/projects/{project_pk}/previous-task/?task={third_task_pk}'
@@ -123,7 +125,8 @@ stages:
           created_at: "{annotation_created_at}"
         next: null
 
-- name: get_previous_task_no_anno_or_draft_for2
+- &get_previous_task_no_anno_or_draft_for2
+  name: get_previous_task_no_anno_or_draft_for2
   request:
     method: GET
     url: '{django_live_url}/api/projects/{project_pk}/previous-task/?task={second_task_pk}&annotation={annotation_pk}'
@@ -183,69 +186,11 @@ stages:
 - id: create_project
   type: ref
 
-- name: create_task
-  request:
-    json:
-      data:
-        text: 'Test text'
-      project: '{project_pk}'
-    method: POST
-    url: '{django_live_url}/api/tasks'
-  response:
-    save:
-      json:
-        first_task_pk: id
-    status_code: 201
-- name: create_task
-  request:
-    json:
-      data:
-        text: 'Test text'
-      project: '{project_pk}'
-    method: POST
-    url: '{django_live_url}/api/tasks'
-  response:
-    save:
-      json:
-        second_task_pk: id
-    status_code: 201
-- name: create_task
-  request:
-    json:
-      data:
-        text: 'Test text'
-      project: '{project_pk}'
-    method: POST
-    url: '{django_live_url}/api/tasks'
-  response:
-    save:
-      json:
-        third_task_pk: id
-    status_code: 201
-
-- name: postpone_first_task
-  request:
-    method: POST
-    url: '{django_live_url}/api/tasks/{first_task_pk}/drafts'
-    json:
-      was_postponed: true
-      project: '{project_pk}'
-      result: []
-  response:
-    status_code: 201
-    save:
-      json:
-        first_draft_pk: id
-    json:
-      task: !int '{first_task_pk}'
-
-- name: get_next_task
-  request:
-    method: GET
-    url: '{django_live_url}/api/projects/{project_pk}/next'
-  response:
-    json:
-      id: !int '{second_task_pk}'
+- *create_first_task
+- *create_second_task
+- *create_third_task
+- *postpone_task_first
+- *get_next_task_second
 
 - name: create_skip_annotation_second_task
   request:
@@ -263,38 +208,11 @@ stages:
         annotation_created_at: created_at
     status_code: 201
 
-- name: get_next_task
-  request:
-    method: GET
-    url: '{django_live_url}/api/projects/{project_pk}/next'
-  response:
-    json:
-      id: !int '{third_task_pk}'
+- *get_next_task_third
 
-- name: get_previous_task_no_anno_or_draft_for3
-  request:
-    method: GET
-    url: '{django_live_url}/api/projects/{project_pk}/previous-task/?task={third_task_pk}'
-  response:
-    status_code: 200
-    json:
-      - previous:
-          task: !int "{second_task_pk}"
-          annotation: !int "{annotation_pk}"
-          created_at: "{annotation_created_at}"
-        next: null
+- *get_previous_task_no_anno_or_draft_for3
 
-- name: get_previous_task_no_anno_or_draft_for2
-  request:
-    method: GET
-    url: '{django_live_url}/api/projects/{project_pk}/previous-task/?task={second_task_pk}&annotation={annotation_pk}'
-  response:
-    status_code: 200
-    json:
-      - previous:
-          task: !int "{first_task_pk}"
-          draft: !int "{first_draft_pk}"
-        next: null
+- *get_previous_task_no_anno_or_draft_for2
 
 - &unskip_task
   name: unskip_task
