--- a/label_studio/tests/tasks_history_back.tavern.yml
+++ b/label_studio/tests/tasks_history_back.tavern.yml
@@ -294,3 +294,64 @@ stages:
           task: !int "{first_task_pk}"
           draft: !int "{first_draft_pk}"
         next: null
+
+---
+test_name: submit_submit_patch
+strict: false
+marks:
+- usefixtures:
+  - django_live_url
+stages:
+- id: signup
+  type: ref
+- id: create_project
+  type: ref
+
+- *create_first_task
+- *create_second_task
+- *create_third_task
+- &submit_task_first
+  name: submit_first_task
+  request:
+    method: POST
+    url: '{django_live_url}/api/tasks/{first_task_pk}/annotations'
+    json:
+      project: '{project_pk}'
+      result: []
+  response:
+    status_code: 201
+    save:
+      json:
+        first_annotation_pk: id
+        first_annotation_created_at: created_at
+    json:
+      task: !int '{first_task_pk}'
+- *get_next_task_second
+- &create_fourth_task
+  name: create_task
+  request:
+    json:
+      data:
+        text: 'Test text'
+      project: '{project_pk}'
+    method: POST
+    url: '{django_live_url}/api/tasks'
+  response:
+    save:
+      json:
+        fourth_task_pk: id
+    status_code: 201
+- *create_annotation_second_task
+- *get_next_task_third
+- *get_previous_task_no_anno_or_draft_for3
+- name: get_previous_task_no_anno_or_draft_for2
+  request:
+    method: GET
+    url: '{django_live_url}/api/projects/{project_pk}/previous-task/?task={second_task_pk}&annotation={annotation_pk}'
+  response:
+    status_code: 200
+    json:
+      - previous:
+          task: !int "{first_task_pk}"
+          annotation: !int "{first_annotation_pk}"
+        next: null
