--- a/label_studio/tests/tasks_history_back.tavern.yml
+++ b/label_studio/tests/tasks_history_back.tavern.yml
@@ -387,3 +387,103 @@ stages:
           task: !int "{first_task_pk}"
           annotation: !int "{first_annotation_pk}"
         next: null
+
+---
+test_name: submit_submit_submit_patch
+strict: false
+marks:
+- usefixtures:
+  - django_live_url
+stages:
+- id: signup
+  type: ref
+- id: create_project
+  type: ref
+
+- *create_first_task
+- *create_second_task
+- *create_third_task
+- *submit_task_first
+- *get_next_task_second
+- *create_fourth_task
+- *create_annotation_second_task
+- *get_next_task_third
+- *get_previous_task_no_anno_or_draft_for3
+- name: get_previous_task_no_anno_or_draft_for2
+  request:
+    method: GET
+    url: '{django_live_url}/api/projects/{project_pk}/previous-task/?task={second_task_pk}&annotation={annotation_pk}'
+  response:
+    status_code: 200
+    json:
+      - previous:
+          task: !int "{first_task_pk}"
+          annotation: !int "{first_annotation_pk}"
+        next: null
+- name: patch_first_annotation
+  request:
+    method: PATCH
+    url: '{django_live_url}/api/annotations/{first_annotation_pk}?taskID={first_task_pk}&project={project_pk}'
+    json:
+      project: '{project_pk}'
+      result:
+      - from_name: label
+        to_name: text
+        type: choices
+        value:
+          choices:
+          - pos1
+  response:
+    status_code: 200
+    save:
+      json:
+        first_annotation_pk: id
+        first_annotation_created_at: created_at
+    json:
+      task: !int '{first_task_pk}'
+- name: get_previous_task_no_anno_or_draft_for3_after_patch
+  request:
+    method: GET
+    url: '{django_live_url}/api/projects/{project_pk}/previous-task/?task={third_task_pk}'
+  response:
+    status_code: 200
+    json:
+      - previous:
+          task: !int "{first_task_pk}"
+          annotation: !int "{first_annotation_pk}"
+        next: null
+- &create_annotation_third_task
+  name: create_annotation_third_task
+  request:
+    headers:
+      content-type: application/json
+    json:
+      lead_time: 12.34
+      result:
+      - from_name: label
+        to_name: text
+        type: choices
+        value:
+          choices:
+          - pos
+    method: POST
+    url: '{django_live_url}/api/tasks/{third_task_pk}/annotations'
+  response:
+    save:
+      json:
+        third_task_annotation_pk: id
+        third_task_annotation_created_at: created_at
+    status_code: 201
+- name: get_previous_task_no_anno_or_draft_for2_after_third_annotation
+  request:
+    method: GET
+    url: '{django_live_url}/api/projects/{project_pk}/previous-task/?task={first_task_pk}&annotation={first_annotation_pk}'
+  response:
+    status_code: 200
+    json:
+      - previous:
+          task: !int "{second_task_pk}"
+          annotation: !int "{annotation_pk}"
+        next:
+          task: !int "{third_task_pk}"
+          annotation: !int "{third_task_annotation_pk}"
