--- a/label_studio/tests/next_task_skip_queue.tavern.yml
+++ b/label_studio/tests/next_task_skip_queue.tavern.yml
@@ -296,7 +296,7 @@ stages:
       - previous:
           task: !int "{first_task_pk}"
           annotation: !int "{first_skipped_annotation_pk}"
-          created_at: "{first_skipped_annotation_created_at}"
+          updated_at: "{first_skipped_annotation_created_at}"
         next: null
 
 # check previous task api
@@ -310,7 +310,7 @@ stages:
       - previous:
           task: !int "{second_task_pk}"
           annotation: !int "{annotation_pk}"
-          created_at: "{annotation_created_at}"
+          updated_at: "{annotation_created_at}"
         next: null
 
 - *get_next_task_queue_is_empty
