--- a/deploy/requirements.txt
+++ b/deploy/requirements.txt
@@ -62,4 +62,4 @@ sentry-sdk>=1.1.0
 launchdarkly-server-sdk==7.5.0
 python-json-logger==2.0.4
 
-https://github.com/heartexlabs/label-studio-converter/archive/7ec35ed02df5e889cdbbc6d40846483c3e9d14be.zip
+-e git+https://github.com/heartexlabs/label-studio-converter@7ec35ed02df5e889cdbbc6d40846483c3e9d14be#egg=label-studio-converter
