--- a/docs/_multiconfig.yml
+++ b/docs/_multiconfig.yml
@@ -1,5 +1,9 @@
 theme_config:
-  tier: opensource
+  tier: enterprise
+deploy:
+  type: aws-s3
+  region: us-east-1
+  bucket: docs.heartex.com
 title: Label Studio
 subtitle: Data labeling, annotation and exploration tool
 description: >-
