--- a/docs/_multiconfig.yml
+++ b/docs/_multiconfig.yml
@@ -1,9 +1,9 @@
 theme_config:
-  tier: enterprise
+  tier: opensource
 deploy:
   type: aws-s3
   region: us-east-1
-  bucket: docs.heartex.com
+  bucket: labelstud.io
 title: Label Studio
 subtitle: Data labeling, annotation and exploration tool
 description: >-
