--- a/label_studio/io_storages/s3/form_layout.yml
+++ b/label_studio/io_storages/s3/form_layout.yml
@@ -27,18 +27,21 @@ aws_params: &aws_params
     autoComplete: "off"
     skipAutofill: true
     allowEmpty: false
+    protected: true
   - type: password
     name: aws_secret_access_key
     label: Secret Access Key
     autoComplete: "new-password"
     skipAutofill: true
     allowEmpty: false
+    protected: true
   - type: password
     name: aws_session_token
     autoComplete: "new-password"
     label: Session Token
     skipAutofill: true
     allowEmpty: true
+    protected: true
 
 ImportStorage:
   # Title, Bucket, Prefix
