--- a/.github/workflows/test_migrations.yml
+++ b/.github/workflows/test_migrations.yml
@@ -50,7 +50,7 @@ jobs:
         name: Configure pip cache
         id: pip-cache
         with:
-          # Cache the Python package environment, excluding pip and setuptools installed by setup-python
+          # Cache the Python package environment, excluding pip and setuptools and label_studio* installed by setup-python
           path: |
             ~/.cache/pip
             ${{ env.pythonLocation }}/bin/*
@@ -59,9 +59,10 @@ jobs:
             !${{ env.pythonLocation }}/bin/pip*
             !${{ env.pythonLocation }}/lib/python*/site-packages/pip*
             !${{ env.pythonLocation }}/lib/python*/site-packages/setuptools*
+            !${{ env.pythonLocation }}/lib/python*/site-packages/label_studio*
           key: ${{ runner.os }}-pip-${{ env.pythonLocation }}-${{ hashFiles('**/requirements.txt') }}-${{ hashFiles('**/requirements-test.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-${{ env.pythonLocation }}-
+            ${{ env.CACHE_NAME_PREFIX }}-${{ runner.os }}-pip-django-${{ env.pythonLocation }}-
 
       - name: Install dependencies
         run: |
