--- a/.github/workflows/cicd_pipeline.yml
+++ b/.github/workflows/cicd_pipeline.yml
@@ -121,7 +121,7 @@ jobs:
     if: |
       github.event_name == 'push' &&
       ( ( github.ref_name == 'develop' && needs.changed_files.outputs.docker == 'true' )
-        || startsWith(github.ref_name, 'ls-release/') )
+        || startsWith(github.ref_name, env.RELEASE_BRANCH_PREFIX) )
     permissions:
       contents: read
       checks: write
@@ -154,12 +154,12 @@ jobs:
     name: "Draft Release"
     if: |
       github.event_name == 'push' &&
-      startsWith(github.ref_name, 'ls-release/')
+      startsWith(github.ref_name, env.RELEASE_BRANCH_PREFIX)
     runs-on: ubuntu-latest
     permissions:
       contents: write
     outputs:
-      id: ${{ steps.create-draft-release.outputs.id }}
+      id: ${{ steps.update-draft-release.outputs.id }}
       rc-version: ${{ steps.create-draft-release.outputs.rc-version }}
     steps:
       - name: Create release draft
@@ -274,30 +274,72 @@ jobs:
                 release = newDraftRelease;
                 core.setOutput("created", true);
             }
-            
-            console.log('Updating release with new release notes')
-            const {data: release_notes} = await github.rest.repos.generateReleaseNotes({
-              owner,
-              repo,
-              tag_name: version,
-              previous_tag_name: previousTag,
-              target_commitish: target_commitish,
-            });
-            const {data: updated_release} = await github.rest.repos.updateRelease({
-              owner,
-              repo,
-              release_id: release.id,
-              draft: true,
-              prerelease: false,
-              name: version,
-              tag_name: version,
-              target_commitish: target_commitish,
-              body: release_notes.body
-            });
-            console.log(`Draft release is updated ${updated_release.html_url}`)
 
-            core.setOutput("id", updated_release.id);
+      - uses: actions/cache@v3
+        name: Configure pip cache
+        id: pip-cache
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-gh-actions-${{ hashFiles('.github/helpers/gh_jira_comparisonator/requirements.txt') }}-${{ hashFiles('.github/helpers/gh_changelog_generator/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-gh-actions-
+
+      - name: Install tools and dependencies
+        run: |
+          pip3 install -r .github/helpers/gh_jira_comparisonator/requirements.txt
+          pip3 install -r .github/helpers/gh_changelog_generator/requirements.txt
+
+      - name: Generate release changelog
+        id: changelog_md
+        env:
+          RELEASE_VERSION: ${{ steps.create-draft-release.outputs.tag_name }}
+          CHANGELOG_SOURCE: "${{ github.workspace }}/output.md"
+          JIRA_USERNAME: "${{ secrets.JIRA_USERNAME }}"
+          JIRA_TOKEN: "${{ secrets.JIRA_TOKEN }}"
+          GH_TOKEN: "${{ secrets.GIT_PAT }}"
+          OUTPUT_FILE_MD: "${{ github.workspace }}/output.md"
+          OUTPUT_FILE_JSON: "${{ github.workspace }}/output.json"
+        run: |
+          set -eux
+          
+          previous_tag=$(git tag --sort=-committerdate | head -n1)
+          
+          export PREVIOUS_REF=${previous_tag} 
+          python3 .github/helpers/gh_changelog_generator/gh_changelog_generator.py
+          
+          echo >> '${{ env.OUTPUT_FILE_MD }}'
+          echo ">" >> '${{ env.OUTPUT_FILE_MD }}'
+          echo ">**Full Changelog**: [${previous_tag}...${{ github.ref_name }}](${{ github.server_url }}/${{ github.repository }}/compare/${previous_tag}...${{ github.sha }})" >> '${{ env.OUTPUT_FILE_MD }}'
+          echo ">This changelog was updated in response to a push of ${{ github.sha }} into ${{ github.ref_name }}. [Workflow run](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> '${{ env.OUTPUT_FILE_MD }}'
+          echo ">" >> '${{ env.OUTPUT_FILE_MD }}'
+          python3 .github/helpers/gh_jira_comparisonator/gh_jira_releases.py >> '${{ env.OUTPUT_FILE_MD }}'
+          echo ">" >> '${{ env.OUTPUT_FILE_MD }}'
+          echo ">**ALL LINES STARTING FROM QUOTE WILL BE IGNORED**" >> '${{ env.OUTPUT_FILE_MD }}'
+          echo "changelog_msg_b64=$(cat '${{ env.OUTPUT_FILE_MD }}' | base64 -w 0)" >> $GITHUB_OUTPUT
+
+      - name: Update Draft Release
+        uses: actions/github-script@v6
+        id: update-draft-release
+        with:
+          github-token: ${{ secrets.GIT_PAT }}
+          script: |
+            const { repo, owner } = context.repo;
+
+            const { data: release } = await github.rest.repos.updateRelease({
+                owner,
+                repo,
+                release_id: '${{ steps.create-draft-release.outputs.id }}',
+                draft: true,
+                prerelease: false,
+                name: '${{ steps.create-draft-release.outputs.tag_name }}',
+                tag_name: '${{ steps.create-draft-release.outputs.tag_name }}',
+                target_commitish: '${{ github.ref_name }}',
+                body: atob(`${{ steps.changelog_md.outputs.changelog_msg_b64 }}`)
+            });
+            console.log(`Draft release is updated: ${release.html_url}`)
+            core.setOutput("id", release.id);
             core.setOutput("tag_name", release.tag_name);
+            core.setOutput("html_url", release.html_url);
 
   build-pypi:
     name: "Build"
@@ -305,7 +347,7 @@ jobs:
       - draft-release
     if: |
       github.event_name == 'push' &&
-      startsWith(github.ref_name, 'ls-release/')
+      startsWith(github.ref_name, env.RELEASE_BRANCH_PREFIX)
     permissions:
       contents: write
     uses: heartexlabs/label-studio/.github/workflows/build_pypi.yml@develop
