--- a/.github/workflows/docker-build-ubi.yml
+++ b/.github/workflows/docker-build-ubi.yml
@@ -1,4 +1,4 @@
-name: "Docker build & push"
+name: "Docker build & push UBI"
 
 on:
   workflow_call:
@@ -6,58 +6,39 @@ on:
       sha:
         required: true
         type: string
-      branch_name:
+      version:
         required: true
         type: string
-    outputs:
-      image_version:
-        description: "Docker tag"
-        value: ${{ jobs.docker_build_and_push.outputs.image_version }}
-      ubi_image_version:
-        description: "Docker UBI tag"
-        value: ${{ jobs.docker_build_and_push.outputs.ubi_image_version }}
 
 env:
   DOCKER_CLI_EXPERIMENTAL: enabled
-  IMAGE_NAME: heartexlabs/label-studio
   PREFLIGHT_REPO: quay.io/opdev/preflight:stable
   DOCKER_CONFIG_PATH: /home/runner/.docker/config.json
-  DOCKER_IMAGE_TAG_CHECK_NAME: "Docker image tag"
 
 jobs:
   docker_build_and_push:
     name: "Docker image"
-    timeout-minutes: 30
+    timeout-minutes: 45
     runs-on: ubuntu-latest
-    outputs:
-      image_version: ${{ steps.version.outputs.image_version }}
-      ubi_image_version: ${{ steps.version.outputs.ubi_image_version }}
     steps:
       - uses: hmarr/debug-action@v2.1.0
 
       - name: Checkout
         uses: actions/checkout@v3
         with:
+          submodules: 'recursive'
           ref: ${{ inputs.sha }}
-
-      - name: Calculate version
-        id: version
-        shell: bash
-        run: |
-          set -x
-          sha="$(git rev-parse HEAD)"
-          echo "sha=$sha" >> $GITHUB_OUTPUT
-          regexp='^ls-release\/(.*)$'; 
-          if [[ '${{ inputs.branch_name }}' =~ $regexp ]]; then
-            image_version="${BASH_REMATCH[1]}rc${sha}"
-          else
-            image_version='${{ inputs.branch_name }}'
-          fi
-          echo "image_version=${image_version}" >> $GITHUB_OUTPUT
-          echo "ubi_image_version=ubi_${image_version}" >> $GITHUB_OUTPUT
+          fetch-depth: 0
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2.3.0
+
+      - name: Login to RedHat Registry
+        uses: docker/login-action@v2.1.0
+        with:
+          registry: quay.io
+          username: ${{ secrets.REDHAT_REGISTRY_LOGIN }}
+          password: ${{ secrets.REDHAT_REGISTRY_PASSWORD }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -69,7 +50,7 @@ jobs:
           python3 $(pwd)/label_studio/core/version.py
           cat $(pwd)/label_studio/core/version_.py
 
-      - name: Download feature flags
+      - name: Download LaunchDarkly Community config
         env:
           LAUNCHDARKLY_COMMUNITY_SDK_KEY: ${{ secrets.LAUNCHDARKLY_COMMUNITY_SDK_KEY }}
           LAUNCHDARKLY_DOWNLOAD_PATH: "label_studio/feature_flags.json"
@@ -89,38 +70,14 @@ jobs:
             exit 1
           fi
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2.1.0
-        with:
-          username: heartexlabs
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push ubuntu
+      - name: Push Docker image
         uses: docker/build-push-action@v3.3.0
-        id: docker_build_and_push_ubuntu
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ steps.version.outputs.image_version }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Login to RedHat Registry
-        uses: docker/login-action@v2.1.0
-        with:
-          registry: quay.io
-          username: ${{ secrets.REDHAT_REGISTRY_LOGIN }}
-          password: ${{ secrets.REDHAT_REGISTRY_PASSWORD }}
-
-      - name: Build and push ubi
-        uses: docker/build-push-action@v3.3.0
-        id: docker_build_and_push_ubi
+        id: docker_build_and_push
         with:
           context: .
           file: Dockerfile.redhat
           push: true
-          tags: quay.io/redhat-isv-containers/${{ secrets.REDHAT_MARKETPLACE_LS_PROJECT_ID }}:${{ steps.version.outputs.image_version }},${{ env.IMAGE_NAME }}:${{ steps.version.outputs.ubi_image_version }}
+          tags: quay.io/redhat-isv-containers/${{ secrets.REDHAT_MARKETPLACE_LSE_PROJECT_ID }}:${{ inputs.version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -132,34 +89,5 @@ jobs:
           --env PFLT_PYXIS_API_TOKEN=${{ secrets.REDHAT_MARKETPLACE_LS_PYXIS_TOKEN }} \
           --env PFLT_CERTIFICATION_PROJECT_ID=${{ secrets.REDHAT_MARKETPLACE_LS_PROJECT_ID }} \
           ${{ env.PREFLIGHT_REPO }} \
-          check container quay.io/redhat-isv-containers/${{ secrets.REDHAT_MARKETPLACE_LS_PROJECT_ID }}:${{ steps.version.outputs.image_version }} \
+          check container quay.io/redhat-isv-containers/${{ secrets.REDHAT_MARKETPLACE_LS_PROJECT_ID }}:${{ inputs.version }} \
           --submit
-
-      - name: Create Docker image tag Check
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const { repo, owner } = context.repo;
-            const details = {
-              "image_version": "${{ steps.version.outputs.image_version }}",
-              "ubi_image_version": "${{ steps.version.outputs.ubi_image_version }}",
-              "sha": "${{ steps.version.outputs.sha }}"
-            }
-            const { data: check } = await github.rest.checks.create({
-              owner,
-              repo,
-              name: '${{ env.DOCKER_IMAGE_TAG_CHECK_NAME }}',
-              head_sha: '${{ steps.version.outputs.sha }}',
-              status: 'in_progress',
-              output: {
-                title: '${{ env.DOCKER_IMAGE_TAG_CHECK_NAME }}',
-                summary: JSON.stringify(details)
-              }
-            });
-            await github.rest.checks.update({
-              owner,
-              repo,
-              check_run_id: check.id,
-              status: 'completed',
-              conclusion: 'success'
-            });
