--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -36,7 +36,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 'recursive'
-          token: ${{ secrets.GIT_PAT }}
           ref: ${{ inputs.sha }}
           fetch-depth: 0
 
@@ -72,12 +71,9 @@ jobs:
           python-version: '3.10'
 
       - name: Create version_.py
-        env:
-          VERSION_DIRECTORY: ./versions
-          VERSION_OVERRIDE: ${{ steps.version.outputs.image_version }}
         run: |
-          python3 label_studio_enterprise/htx/version.py
-          cat ./versions/version_.py
+          python3 $(pwd)/label_studio/core/version.py
+          cat $(pwd)/label_studio/core/version_.py
 
       - name: Download LaunchDarkly Community config
         env:
