--- a/.gitignore
+++ b/.gitignore
@@ -77,5 +77,5 @@ docker-compose.override.yml
 .bash_history
 
 # if you want to include feature flags - use 
-# git add -f feature_flags.json
+# git add -f label_studio/feature_flags.json
 label_studio/feature_flags.json
