--- a/.github/workflows/algolia-crawler.yml
+++ b/.github/workflows/algolia-crawler.yml
@@ -5,7 +5,7 @@ on:
     branches: [ 'ht/add-new-theme' ]
     paths:
       - 'docs/**'
-      - '.github/workflow/algolia-crawler.yml'
+      - '.github/workflows/algolia-crawler.yml'
 
 jobs:
   algolia_indexer:
@@ -20,13 +20,13 @@ jobs:
         "selectors_exclude": [".home-page-index"], 
         "start_urls": ["https://docs.heartex.com/guide", "https://docs.heartex.com/templates", "https://docs.heartex.com/tags"],
         "selectors": {
-          "lvl0": ".content h1, .ResourcesBannerHeading",
-          "lvl1": ".content h2, .ResourcesContent h2",
-          "lvl2": ".content h3, .ResourcesContent h3",
-          "lvl3": ".content h4, .ResourcesContent h4",
-          "lvl4": ".content h5, .ResourcesContent h5,",
-          "lvl5": ".content h6, .ResourcesContent h6", 
-          "content": ".content p, .ResourcesContent p, .content li, .ResourcesContent li, .content td, .ResourcesContent td"
+        "lvl0": ".content h1, .ResourcesBannerHeading",
+        "lvl1": ".content h2, .ResourcesContent h2",
+        "lvl2": ".content h3, .ResourcesContent h3",
+        "lvl3": ".content h4, .ResourcesContent h4",
+        "lvl4": ".content h5, .ResourcesContent h5,",
+        "lvl5": ".content h6, .ResourcesContent h6", 
+        "content": ".content p, .ResourcesContent p, .content li, .ResourcesContent li, .content tr, .ResourcesContent tr"
         }}
     name: Index Algolia
     steps:
