--- a/.github/workflows/algolia-crawler.yml
+++ b/.github/workflows/algolia-crawler.yml
@@ -24,9 +24,9 @@ jobs:
         "lvl1": ".content h2, .ResourcesContent h2",
         "lvl2": ".content h3, .ResourcesContent h3",
         "lvl3": ".content h4, .ResourcesContent h4",
-        "lvl4": ".content h5, .ResourcesContent h5,",
+        "lvl4": ".content h5, .ResourcesContent h5",
         "lvl5": ".content h6, .ResourcesContent h6", 
-        "content": ".content p, .ResourcesContent p, .content li, .ResourcesContent li"
+        "content": ".content p, .ResourcesContent p, .content li, .ResourcesContent li, .content tr, .ResourcesContent tr"
         }}
     name: Index Algolia
     steps:
