--- a/deploy/requirements.txt
+++ b/deploy/requirements.txt
@@ -1,17 +1,17 @@
 wheel
 appdirs>=1.4.3
 attr==0.3.1
-attrs>=19.2.0
+#attrs>=19.2.0
 pyyaml>=5.3.1
 azure-storage-blob>=12.6.0
 
 boto~=2.49.0
-boto3~=1.16.28
-botocore~=1.19.28
+#boto3~=1.16.28
+#botocore~=1.19.28
 bleach~=5.0.0
 
 google-api-core==2.10.0
-google-auth==2.11.0
+#google-auth==2.11.0
 google-cloud-appengine-logging==1.1.0
 google-cloud-audit-log==0.2.0
 google-cloud-core==2.3.2
@@ -39,19 +39,19 @@ drf-flex-fields==0.9.5
 drf_yasg==1.20.0
 drf-generators==0.3.0
 htmlmin==0.1.12
-jsonschema==3.2.0
+#jsonschema==3.2.0
 lockfile>=0.12.0
 lxml>=4.2.5
 defusedxml>=0.7.1
-numpy==1.21.6
+#numpy==1.21.6
 ordered_set==4.0.2
-pandas>=0.24.0
+#pandas>=0.24.0
 protobuf>=3.15.5
 psycopg2-binary==2.9.1
-pydantic>=1.7.3,<=1.8.2
+#pydantic>=1.7.3,<=1.8.2
 python_dateutil==2.8.2
-pytz ~=2019.3
-requests>=2.22.0,<2.28
+#pytz ~=2019.3
+#requests>=2.22.0,<2.28
 rq==1.10.1
 rules==2.2
 ujson>=3.0.0
