--- a/label_studio/annotation_templates/audio-speech-processing/automatic-speech-recognition/config.yml
+++ b/label_studio/annotation_templates/audio-speech-processing/automatic-speech-recognition/config.yml
@@ -2,7 +2,7 @@ title: Automatic Speech Recognition
 type: community
 group: Audio/Speech Processing
 image: /static/templates/automatic-speech-recognition.png
-details: <h1>Provide transcript for the audio</h1>
+details: <h1>Provide transcript for the audio!</h1>
 config: |
   <View>
     <Audio name="audio" value="$audio" zoom="true" hotkey="ctrl+enter" />
