--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,7 @@
     "@notionhq/client": "^2.2.3",
     "@sanity/client": "^3.4.1",
     "co": "^4.6.0",
+    "dotenv": "^16.0.3",
     "front-matter": "^4.0.2",
     "hexo": "^6.3.0",
     "hexo-admonition": "^1.1.2",
